--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Extension API Configuration
-EXTENSION_API_KEY=68282ff80560cf2421d4de06           # Your API key for accessing the extension service
-EXTENSION_API_SECRET=jL7L.hxN.JclmY3    # Your API secret for authenticating requests
+EXTENSION_API_KEY=684aab440c6be60cc0fd6c0e           # Your API key for accessing the extension service
+EXTENSION_API_SECRET=8sMnKvgqIkh7KC8  # Your API secret for authenticating requests
 EXTENSION_BASE_URL=https://d2mfb2ee72hoze.cloudfront.net/        # Base URL for the extension API
 
 # Fynd pixelbin API Configuration
