--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 # Extension API Configuration
-EXTENSION_API_KEY=684aab440c6be60cc0fd6c0e           # Your API key for accessing the extension service
-EXTENSION_API_SECRET=8sMnKvgqIkh7KC8  # Your API secret for authenticating requests
-EXTENSION_BASE_URL=https://d2mfb2ee72hoze.cloudfront.net/        # Base URL for the extension API
+EXTENSION_API_KEY=684aab440c6be60cc0fd6c0e       
+EXTENSION_API_SECRET=8sMnKvgqIkh7KC8
+EXTENSION_BASE_URL=https://d2mfb2ee72hoze.cloudfront.net/
 
 # Fynd pixelbin API Configuration
-PIXELBIN_API_KEY=dec7d4d1-4212-46fe-a009-57cc55b6978a   # Your API key for accessing Pixelbin
-PIXELBIN_API_SECRET=cf3fbf36-6a69-4657-9671-61bb6737124c # Your API secret for authenticating requests
-PIXELBIN_CLOUD_NAME=fynd-vip-extension # Your Pixelbin cloud name for media storage
+PIXELBIN_API_KEY=dec7d4d1-4212-46fe-a009-57cc55b6978a
+PIXELBIN_API_SECRET=cf3fbf36-6a69-4657-9671-61bb6737124c
+PIXELBIN_CLOUD_NAME=fynd-vip-extension
 
 # Server Configuration
-BACKEND_PORT=8080                     # Port number for the backend server
+BACKEND_PORT=8080
 
 # Optional Configurations
 # FP_API_DOMAIN=<fynd_api_domain>       # Fynd Platform API Domain (optional: default value is `api.fynd.com`) (Set this if you are using any other fynd cluster)
